...
    func getProfileDetails() -> Profile? {
        guard let profile = profileService.profile else { return nil }
        return profile
    }
    
    func prepareAlert() -> (title: String, message: String, actionYes: String, actionNo: String) {
        let title = "Пока, пока!"
        let message = "Уверены что хотите выйти?"
        let actionYes = "Да"
        let actionNo = "Нет"
        return (title, message, actionYes, actionNo)
    }
    
    func cleanAndSwitchToSplashView() {
        WebViewViewController.clean()
...
